fix some spacing issues with images

--- a/devisio/common/static/sass/devisio.sass
+++ b/devisio/common/static/sass/devisio.sass
@@ -5,6 +5,10 @@
 *
   font-family: 'Roboto Slab', serif
   font-weight: 400
+  -moz-box-sizing: border-box
+
+  &:before, &:after
+    -moz-box-sizing: border-box
 
 html, body
   height: 100%
@@ -76,3 +80,10 @@ footer
     left: 0
     right: 0
     z-index: 15
+
+img
+  display: block
+  margin: 0
+  padding: 0
+  border: 0 none
+  outline: none
